--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "cities_api_js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "build": "tsc",
+    "start": "node ./dist/runServer.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "mp40",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
