--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist",
     "target": "ES2020",
     "module": "CommonJS",
+    "strict": false,
     "noImplicitAny": true,
-    "types": ["vitest/globals"]
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "types": ["vitest/globals", "node"]
   },
-  "include": ["src"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules"]
 }
