--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^3.0.1",
+    "sqlite3": "^5.1.6"
   }
 }
