--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
   },
