--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "sqlite3": "^5.1.6",
